dw_src = files('deconwolf.c', 'dw.c', 'fim.c', 'fim_tiff.c',
'dw_maxproj.c', 'dw_imshift.c', 'fft.c', 'tiling.c', 'method_identity.c',
'method_rl.c', 'method_ave.c', 'method_eve.c', 'method_shb.c', 'dw_util.c', 'ftab.c')

dw_bw_src = files('dw_bwpsf.c', 'fim.c', 'fim_tiff.c', 'bw_gsl.c',
'lanczos.c', 'li.c', 'fft.c', 'dw_util.c', 'ftab.c')
